--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 				<b><i><h1>Rothenberg DDS/<br>TLC Dental Group</h1><h2>The Art of Gentle Dentistry</h2></b></i>
 			</div>
 			<div class="span3">
-				<h4>315-637-7684<br>7197 Highbridge<br>Fayetteville, NY<br>Directions<br>Email Us</h4>
+				<i><h4>315-637-7684<br>7197 Highbridge<br>Fayetteville, NY<br>Directions<br>Email Us</h4></i>
 			</div>	
 		</div>			
 	</div>
@@ -43,7 +43,6 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Toothbrush Mailbox", office_toothbrushmailbox_path %></li>
                 <li><%= link_to "Amenities", office_amenities_path %></li>
-                <li><%= link_to "Courtyard & Greeting Room", office_courtyard_path %></li>
 				<li><%= link_to "Advanced Technology", office_advancedtechnology_path %></li> 
 				<li><%= link_to "Green Dentistry", office_greendentistry_path %></li> 
               </ul>
