--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,24 +15,24 @@
 <div id="left-welcome">
 	<div class="row-fluid">
 		<div class="span6 offset4">
-			<p style="margin-left: -25px;">
-				TLC is Art expressed by our Toothbrush Mailbox<br>
-				TLC is Comfort in the relaxed ambiance of our office<br>
-				TLC is Gentle care for your peace of mind<br>
-				TLC is a Dream Smile from a palette of possibilities<br>
-				TLC is Robust Health from a full range of services<br>
-				TLC is Modern Technology for optimum treatment<br>
-			</p>
+			<i><p style="margin-left: -25px;">
+				<b>TLC is Art</b> expressed by our Toothbrush Mailbox<br>
+				<b>TLC is Comfort</b> in the relaxed ambiance of our office<br>
+				<b>TLC is Gentle</b> care for your peace of mind<br>
+				<b>TLC is a Dream Smile</b>  from a palette of possibilities<br>
+				<b>TLC is Robust Health</b>  from a full range of services<br>
+				<b>TLC is Modern Technology </b>for optimum treatment<br>
+			</p></i>
 		</div>
 	</div>
 </div>
 <div class="welcome-text">
 	<div class="row-fluid">
 		<div class="span12">
-			<h4>
+			<h5>
 				We at TLC warmly welcome you to<br>
 				our family of staff and patients.
-			</h4><br>
+			</h5><br>
 			<%=	image_tag 'homepage-signature.jpg' %>
 		</div>
 	</div>
