--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -246,7 +246,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container" style="display:block;">
-			<h3>The Mighty Moler</h3>
+			<h3>The Mighty Molar</h3>
 			<table>
 				<tr>	
 					<td rowspan="12">
@@ -307,7 +307,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
-			<h3>Flossie</h3>
+			<h3>Flossy</h3>
 			<table>
 
 				<tr>
