two buttons added to all pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -120,6 +120,14 @@
 	</div>
 </div>
 </div>
+<div class="row-fluid" style="text-align:center;">
+	<div class="span3">
+		<%= link_to image_tag( 'dreamsmiles-btn.png'), 'dreamsmiles' %>
+	</div>
+	<div class="span3 offset6">
+		<%= image_tag 'socialmedia-btn.png' %>
+	</div>
+</div>
 		<%= yield %>
 	</div>
 </body>
