last names of staff removed

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,7 @@
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
-			Contact Us
+			<u>Contact Us</u>
 		</div>
 	</div>
 </div>
