--- a/app/views/static_pages/newpatients.html.erb
+++ b/app/views/static_pages/newpatients.html.erb
@@ -1,7 +1,7 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>New Patients</h3>
+			<u><h3>New Patients</h3></u>
 			<p>
 				It is a pleasure to welcome you to our TLC family of patients and a privilege to provide for your dental health and  "Dream Smile."  In your first and following visits, we will always welcome you warmly, offer you the most modern dental technology, afford you our signature "Gentle Dentistry," and draw on our years of training and experience to assure your dental well being.  In short, we will care for you as one of our family.<br>
 			</p>
