--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -1,7 +1,7 @@
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
-			Staff
+			<u>Staff</u>
 		</div>
 	</div>
 </div>
@@ -116,7 +116,7 @@
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
-					<h3>Jill Carlucci<br>
+					<h3>Jill<br>
 						Dental Assistant
 					</h3>
 				</div>
@@ -138,7 +138,7 @@
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
-					<h3>Louise Anne Degaetano<br>
+					<h3>Louise<br>
 						Dental Hygienist
 					</h3>
 				</div>
@@ -160,7 +160,7 @@
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
-					<h3>Donald Dixie<br>
+					<h3>Donald<br>
 						Ombudsman
 					</h3>
 				</div>
@@ -182,7 +182,7 @@
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
-					<h3>Traci Klix<br>
+					<h3>Traci<br>
 						Dental Assistant
 					</h3>
 				</div>
@@ -204,7 +204,7 @@
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			 
-					<h3>Joy McDermott<br>
+					<h3>Joy<br>
 						Office Receptionist
 					</h3>
 				</div>
@@ -226,7 +226,7 @@
 		<div class="content-container">
 			<div class="row-fluid">
 				<div class="span12">			
-					<h3>Kay Simonson<br>
+					<h3>Kay<br>
 						Dental Hygienist 
 					</h3>
 				</div>
