--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -27,12 +27,11 @@ td {
 }
 
 .container {
-  // width: 980px;
   -webkit-box-shadow:  1px 1px 15px 10px rgba(0, 0, 0, .1);      
   box-shadow:  1px 1px 15px 10px rgba(0, 0, 0, .1);
   padding: 20px;
   background-color: white;
-  width: 980px;
+  // width: 980px;
 }
 
 .dropdown-submenu li > a {
@@ -99,6 +98,9 @@ td {
   font-style: italic;
   display: block;
   margin-top: 20px;
+  display: block;
+  position: relative;
+  text-decoration: underline !important;
 }
 
 .green-pagetitle {
