--- a/app/views/static_pages/gentledentistry.html.erb
+++ b/app/views/static_pages/gentledentistry.html.erb
@@ -1,7 +1,7 @@
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
-			Gentle Dentistry
+			<u>Gentle Dentistry</u>
 		</div>
 	</div>
 </div>
