--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 				<b><i><h1>Rothenberg DDS/<br>TLC Dental Group</h1><h2>The Art of Gentle Dentistry</h2></b></i>
 			</div>
 			<div class="span3">
-				<i><h4>315-637-7684<br>7197 Highbridge<br>Fayetteville, NY<br>Directions<br>Email Us</h4></i>
+				<i><h4 style="line-height:25px; margin-top: -6px;">315-637-7684<br>7197 Highbridge<br>Fayetteville, NY<br>Directions<br>Email Us</h4></i>
 			</div>	
 		</div>			
 	</div>
@@ -121,14 +121,29 @@
 </div>
 </div>
 <div class="row-fluid" style="text-align:center;">
-	<div class="span3">
+	<div class="offset1 span2">
 		<%= link_to image_tag( 'dreamsmiles-btn.png'), 'dreamsmiles' %>
 	</div>
-	<div class="span3 offset6">
-		<%= image_tag 'socialmedia-btn.png' %>
+	<div class="span2 offset6">
+		<div class="socialmedia">
+			<h6 style="position:relative; top: 7px;">Join Us</h6>
+			<%= link_to image_tag('facebook.jpg'), 'http://www.facebook.com' %>			
+			<%= link_to image_tag('twitter.jpg'), 'http://www.twitter.com' %>			
+		</div>
 	</div>
 </div>
-		<%= yield %>
-	</div>
+	<%= yield %>
+	<div class="footer">
+		<div class="row-fluid">
+			<div class="span12">
+				<h5> Our Website Family </h5>
+				<p>
+					Rothenberg DDS/TLC Dental Group; Dr. Stephen J. Rothenberg, DDS; Dr. Richard Brinker DDS; Route 92, 7197 Highbridge Road, Fayetteville, NY 13066 315-637-7684; tlcdentalgroup.com; toothbrushmailbox.com; thedentalencyclopedia.com; thedentaldictionary.com; wisdomtoothwit.com Drs. Rothenberg and Brinker provide the following services: dental bonding, bridges, cleaning, contourintg, crowns, dentures, fillings, fluoride treatments,implants, mouthguards, sealants, sleep apnia, snap-on-smile, snoring, teeth grinding, TMJ, veneers, whitening, wisdom teeth. They serve Greater Syracuse, New York  including Manlius, Fayetteville, Jamesville, DeWitt, Cazenovia, East Syracuse, Eastwick, Liverpool, North   Syracuse,  Cicero, Baldwinsville, Brighton,  copyright TLC Dental Group, 2013<br>
+					A full service family dental practice serving Greater Syracuse.
+				</p>
+			</div>
+		</div>
+	</div>	
+</div>
 </body>
 </html>
