--- a/app/views/static_pages/TMD.html.erb
+++ b/app/views/static_pages/TMD.html.erb
@@ -8,7 +8,7 @@
 			<p>
 				Common symptoms of TMD are:
 			</p>
-			<%= image_tag "clearguard.jpg", :class => "float-right" %>
+			<%= image_tag "wisdomtooth.jpg", :class => "float-right" %>
 			<ul>
 				<li>Pain or tenderness in your ears without apparent infection or injury </li>
 				<li>Pain and pressure behind your eyes</li>
