--- a/app/views/static_pages/advancedtechnology.html.erb
+++ b/app/views/static_pages/advancedtechnology.html.erb
@@ -10,10 +10,10 @@
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span6">			
+				<div class="span4">			
 					<h3>Orthophos XG 5</h3>	
 				</div>
-				<div class="span6">
+				<div class="span8">
 					<%= image_tag 'orthophos.jpg' %>
 				</div>
 			</div>
@@ -34,10 +34,10 @@
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span8">				
+				<div class="span7">				
 					<h3>USBCAM2 Intraoral Camera</h3>
 				</div>	
-				<div class="span4">
+				<div class="span5">
 					<%= image_tag 'usbcam.jpg' %>
 				</div>
 			</div>
@@ -56,10 +56,10 @@
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span8">				
+				<div class="span7">				
 					<h3>Provecta 70 Intraoral X-Ray</h3>	
 				</div>
-				<div class="span4">
+				<div class="span5">
 					<%= image_tag 'xray.jpg' %>
 				</div>
 			</div>
@@ -67,7 +67,7 @@
 				The Provecta 70 Intraoral X-Ray comes to us from Air Techniques, a leader in optimized imagery. Ergonomically engineered for precise positioning and stability, it provides unrivaled sets of intraoral x-rays, the roadmaps to our patient’s dental health.<br>
 			</p>
 			<p>
-				Vested with the most advanced digital technology, the Provecta 70 significantly improves diagnostics and greatly reduces exposure. And by employing a re-usable semi-conductor device to capture images, it eliminates the need for x-ray film and toxic chemicals thereby contributing to the health and safety of our patients and our environment. Indeed, so bountiful are its benefits that when the Provecta 70 rolls on its wheels we affectionately call it “Wall-E.”
+				Vested with the most advanced digital technology, the Provecta 70 significantly improves diagnostics and greatly reduces exposure. And by employing a re-usable semi-conductor device to capture images, it eliminates the need for x-ray film and toxic chemicals thereby contributing to the health and safety of our patients and our environment. Indeed, so bountiful are its benefits that when the Provecta leaves its cabinet and rolls on its wheel, we affectionately call it "Wall-E.."
 			</p>		
 		</div>
 	</div>
@@ -77,10 +77,10 @@
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span8">				
+				<div class="span7">				
 					<h3>Polus Whitening Accelerator</h3>
 				</div>
-				<div class="span4">
+				<div class="span5">
 					<%= image_tag 'whiteningmachine.jpg' %>
 				</div>
 			</div>
@@ -98,10 +98,10 @@
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span6">					
+				<div class="span5">					
 					<h3>Cavitron Jet Plus</h3>
 				</div>
-				<div class="span6">
+				<div class="span7">
 					<%= image_tag 'jetplus.jpg' %>
 				</div>				
 			</div>
@@ -116,10 +116,10 @@
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span9">					
+				<div class="span8">					
 					<h3>Odyssey Navigator Diode Laser</h3>
 				</div>
-				<div class="span3">
+				<div class="span4">
 					<%= image_tag 'diodelaser.jpg' %>
 				</div>				
 			</div>				
@@ -134,10 +134,10 @@
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span6">				
+				<div class="span3">				
 					<h3>Eaglesoft</h3>
 				</div>
-				<div class="span6">
+				<div class="span9">
 					<%= image_tag 'eaglesoft.jpg' %>
 				</div>				
 			</div>							
@@ -152,10 +152,10 @@
 	<div class="span8 offset2">
 		<div class="content-container">
 			<div class="row-fluid">
-				<div class="span9">				
+				<div class="span7">				
 					<h3>Panasonic TC-L32C22 HDTV</h3>
 				</div>
-				<div class="span3">
+				<div class="span5">
 					<%= image_tag 'tv.jpg' %>
 				</div>				
 			</div>
