--- a/app/views/static_pages/amenities.html.erb
+++ b/app/views/static_pages/amenities.html.erb
@@ -1,7 +1,7 @@
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
-			Amenities
+			<u>Amenities</u>
 		</div>
 	</div>
 </div>
@@ -9,11 +9,11 @@
 <div class="row-fluid">
 	<div class="span8 offset2">
 		<div class="content-container">
-			<p>
+			<p id="amenities">
 				You are first aware of the distinctiveness of the TLC Dental group when you are heralded by our landmark toothbrush mailbox. As you drive into our equally unique courtyard and its seasonal landscaping, you already enjoy a sense of well being.<br> 
 			</p>
 			<p>
-				Our Greeting Room then awaits both old and new pateints who are warmly welcomed by our staff.
+				Our Greeting Room then awaits both old and new patients who are warmly welcomed by our staff.  A fireplace casts a comforting glow, an HDTV provides adult diversion, a Lego area delights children, and our talking Swami engages all ages.
 			</p>
 		</div>
 	</div>
