--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -9,19 +9,26 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container" style="display:block;">
-			<%= image_tag 'pocketwatch.jpg', :class => "float-right" %>	
-			<h3>Office Hours</h3>			
-			<table>
-				<tr>
-					<td>Monday-Thursday</td>
-					<td>8:30am-1pm and 2p-5pm</td>
-				</tr>
-				<tr>
-					<td>Friday</td>
-					<td>8:30am-12pm</td>
-				</tr>
-			</table>	
-			<br><br><br><br>		
+		
+			<div class="row-fluid">
+				<div class="span6">
+					<h3>Office Hours</h3>			
+					<table>
+						<tr>
+							<td>Monday-Thursday</td>
+							<td>8:30am-1pm and 2p-5pm</td>
+						</tr>
+						<tr>
+							<td>Friday</td>
+							<td>8:30am-12pm</td>
+						</tr>
+					</table>	
+					<br><br><br><br>
+				</div>
+				<div class="span6">	
+					<%= image_tag 'pocketwatch.jpg' %>	
+				</div>
+			</div>	
 		</div>
 	</div>
 </div>
