--- a/app/views/static_pages/dentalnexus.html.erb
+++ b/app/views/static_pages/dentalnexus.html.erb
@@ -1,7 +1,7 @@
 <div class="pagetitle">
 	<div class="row-fluid">
 		<div class="span12">
-			<h3>Nexus of Dental & General Health</h3>
+			<h3>Dental & General Health</h3>
 		</div>
 	</div>
 </div>
@@ -12,7 +12,7 @@
 			Modern research is revealig a closer relationship between your dental health and general. The bacteria that cause preiodontal disease can reach far beyond the oral cavity and may affect these conditions:
 		</p>
 		<p style="color: #0f53a5;">
-			For research updates on that relationship between your dental health and general health, please pay regular visitings to the TLC Wisdom Tooth at _________
+			For research updates on that relationship between your dental health and general health, please pay regular visitings to the TLC Wisdom Tooth at tlcwisdomtooth.com
 		</p>
 	</div>
 </div>
