--- a/app/views/static_pages/gentledentistry.html.erb
+++ b/app/views/static_pages/gentledentistry.html.erb
@@ -8,7 +8,7 @@
 
 <div class="row-fluid">
 	<div class="span8 offset2">
-		<div class="content-container">
+		<div class="content-container-first">
 			<div class="row-fluid">
 				<div class="span8">			
 					<h3>The Art of Gentle Dentistry</h3>
@@ -31,9 +31,6 @@
 				<div class="span8">			
 					<h3>Comforting Staff</h3>
 				</div>
- 				<div class="span4">
- 					<%= image_tag 'cowardlylion.jpg' %>
- 				</div>
 			</div> 				
 			<p>
 				Foremost in providing for your dental comfort are the dentists and hygienists of TLC. The exacting standards of Dr. Rothenberg are reflected in the welcoming manner and understanding demeanor of our staff. Their compassion and tender care assure the comfort of your dental treatment.
@@ -48,9 +45,6 @@
 			<div class="row-fluid">
 				<div class="span8">			
 					<h3>Comforting Ambiance</h3> 
-				</div>
-				<div class="span4">
-					<%= image_tag 'cowardlylion.jpg' %>
 				</div>
 			</div>
 			<p>
@@ -90,7 +84,7 @@
 				</div>
 			</div>
 			<p>
-				For patients of all ages who find comfort in “man’s best friend”, our most loveable staff member stands at the ready. Flossie is not only a wonderfully affectionate white Labrador, but she also is a certified therapy dog who likes nothing better than to comfort patients.
+				For patients of all ages who find comfort in “man’s best friend”, our most loveable staff member stands at the ready. Flossy is not only a wonderfully affectionate white Labrador, but she also is a certified therapy dog who likes nothing better than to comfort patients.
 			</p>				
 		</div>
 	</div>
