--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -3,9 +3,17 @@
 		<div class="span12">
 			<u>Staff</u>
 		</div>
+	</div>			
+</div>
+<div class="subheader">
+	<div class="row-fluid">
+		<div class="span10 offset1">
+			<p>
+				Our staff is the heart of a practice that over twenty-nine years has become a family of practitioners and patients.  Each staff member expresses our commitment to gentle care and our resolve to provide radiant dental health and smiles to our patients.  And each staff member brings a personal touch of experience and care to TLC that is reflected in these profiles.
+			</p>
+		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
@@ -26,10 +34,10 @@
 						Together with his wife Marsha, Dr. Rothenberg supports many local groups and organizations including Symphony Syracuse, the Everson Museum, the Syracuse Stage, and the Rosamond Gifford Zoo. They also enjoy the theatrical, musical, and athletic performances of their family of patients.<br>
 					</p>
 					<p>
-						Most notably, Dr. Rothenberg is devoted to his family, to his wife and to their daughters Delilah and Tiffany, who, although living in New York City, return regularly to the family fold.  To complement his life of work and family, Dr. Rothenberg pursues several avocations.  Art has been a gift and passion from early age and is manifest in the “toothbrush mailbox” of his design, in the murals that grace the walls of his home, and especially in the "Dream Smiles" that define his patients. .He also has long been an advocate of physical fitness and body building.  In all, Dr. Rothenberg's life has been one of caring for his family, his community, and particularly his patients.<br>
+						To complement his life of work and family, Dr. Rothenberg pursues several avocations.  Art has been a gift and passion from early age and is manifest in the “toothbrush mailbox” of his design, in the murals that grace the walls of his home, and especially in the "Dream Smiles" that define his patients. .He also has long been an advocate of physical fitness and body building.  In all, Dr. Rothenberg's life has been one of caring for his family, his community, and particularly his patients.<br>
 					</p>
 					<%= image_tag 'drrothenburg.jpg', :class => "float-left" %>
-					<p>
+					<p id="rothenburg">
 						“Professionally and personally, my life has been defined by caring for my immediate family and for my family of patients.  Foremost, has been my desire to protect them from fear and pain and to provide for their physical and mental well being, a commitment etched in the name of the practice.<br>
 					</p>
 					<p>
@@ -67,7 +75,7 @@
 						A devoted husband, Dr.Brinker has been married for thirty years to Lynn, his wife and a local endodontist.  They take pride in the accomplishments of their  daughter Alyson, a flight surgeon with the U.S. Navy, and their son Richard, Jr., an IT specialist.  The Brinkers presently live in Liverpool with their dogs Jereboam and Benjamin.    When not caring for patients and the community Dr. Brinker enjoys invigorating pursuits including golf, tennis, skiing, cycling, hunting, fishing, and camping.<br>
 					</p>
 					<%= image_tag 'drbrinker.jpg', :class => "float-left" %>		
-					<p>				
+					<p id="brinker">				
 						"As my father was a dentist, I was able to see the results of excellence in dentistry at an early age.  I now enjoy the pursuit of this excellence with the TLC Dental Group.  Here I am able to work with a skilled and professional staff that is constantly striving for improvement.  It is a goal oriented team effort conducted on a one-on one, personal, healthcare treatment plan basis.  It is, in essence, an office that cares about each individual patient."
 					</p>
 				</div>
@@ -102,7 +110,7 @@
 						Finally, Marsha is well known in Syracuse political circles for her support of Hillary Clinton.  She was one of the first CNY supporters of Hillary’s Senate campaign and subsequently organized numerous events on her behalf.  She also served as a member of the Executive Finance Committee in her Presidential campaign.  However, in an age of increasingly partisan politics, Marsha’s circle of friends includes many Republicans and in managing TLC Dental, politics stays at the door.  Republicans, Democrats, and Independents are all treated with tender loving care.<br>
 					</p>
 					<%= image_tag 'marsha.jpg', :class => "float-left" %>  
-					<p>                                                      
+					<p id="marsha">                                                      
 						“I consider myself to be singularly blessed with three families: my personal family, my family of practitioners, and my family of patients.  For more than a quarter of a century it has been my joy to share in their growth, health, and happiness.  TLC Dental Group is more than a name for me.  It is my three families.”  
 					</p>
 				</div>
