--- a/app/views/static_pages/wisdomteeth.html.erb
+++ b/app/views/static_pages/wisdomteeth.html.erb
@@ -7,7 +7,7 @@
 			</p>
 			<ul>
 				<li>Misalignment, a condition in which they fully emerge but are misaligned</li>
-				<li>Impaction, a condition in which they are submerged below the gum line in a vertical, horizontal, or t</li>
+				<li>Impaction, a condition in which they are submerged below the gum line in a vertical, horizontal, or angular position</li>
 				<li>Partial Eruption, a condition in which they only partially emerge </li>
 			</ul>
 			<p>
@@ -19,8 +19,7 @@
 			<ul>
 				<li>Pain or jaw stiffness near an impacted wisdom tooth</li>
 				<li>Ear pain</li>
-				<li>Pain or irritation from a wisdom tooth coming in at an awkward angle and rubbing against your     	           cheek, tongue, or top of the mouth<li>
-				<li>An infected swelling in the flap of gum tissue that has formed on top of a partially erupted wisdom tooth</li>
+				<li>Pain or irritation from a wisdom tooth coming in at an awkward angle and rubbing against your cheek, tongue, or top of the mouth<li>
 				<li>Tooth decay or gum disease caused by difficult access for proper cleaning</li>
 				<li>Crowding of other teeth by a wisdom tooth</li>
 				<li>Damage to adjacent teeth</li>
@@ -31,6 +30,9 @@
 			</p>
 			<p>	
 				Throughout your examination and treatment you will enjoy the comfort of our signature “Gentle Dentistry.”
+			</p>
+			<p>		
+				For more information on wisdom teeth, click on Dr. Rothenberg’s Dental Encyclopedia and Dr. Rothenberg's Dental Dictionary.  And for prompt alleviation and treatment of wisdom teeth symptoms, please call the TLC Dental Group Fayetteville / Manlius office at (315) 637-7684.
 			</p>
 		</div>
 	</div>
