--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -70,6 +70,21 @@ td {
   margin-top: -5px;
 }
 
+.socialmedia {
+  background-image:url('socialmedia-btn.png');
+  background-repeat: no-repeat;
+  width: 133px;
+  height: 53px;
+  position:relative;
+  bottom: 10px;
+    h6 {
+      margin-bottom: -5px;
+    }
+    img {
+      margin-top: 9px;
+    }
+}
+
 .welcome-text {
   text-align: center;
   color: #0f53a5;
@@ -111,6 +126,12 @@ td {
   text-align: center;
 }
 
+.subheader {
+  color: #0f53a5;
+  text-align: justify;
+  margin-top: 25px;
+}
+
 .content-container {
 	color: #2a66af;
 	border: 1px solid #2a66af;
@@ -118,6 +139,29 @@ td {
 	padding: 50px;
 	margin-top: 35px;
 	margin-bottom: 35px;
+  position: relative;
+  display: inline-block;
+  text-align: justify;
+    img {
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    h3 {
+      display: inline-block;
+    }
+    h4 {
+      text-align: center;
+    }    
+}
+
+.content-container-first {
+  color: #2a66af;
+  border: 1px solid #2a66af;
+  border-radius: 13px;
+  padding: 50px;
+  margin-top: 70px;
+  margin-bottom: 35px;
   position: relative;
   display: inline-block;
   text-align: justify;
@@ -181,9 +225,31 @@ td {
     }
 }
 
+#rothenburg {
+  margin-top: 80px;
+}
+
+#brinker {
+  margin-top: 110px;
+}
+
+#marsha {
+  margin-top: 150px;
+}
+
+#amenities {
+  margin-top: 40px;
+}
+
+.centered {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .mailboxphoto {
-  margin-top: 25px;
-  margin-bottom: 25px;
+  margin-top: 35px;
+  margin-bottom: 35px;
 }
 
 .float-right {
@@ -199,4 +265,20 @@ td {
 table.gadget {
   text-align: center !important;
   display: inline-block;
+}
+
+.footer {
+  position: relative;
+  bottom: 0px;
+  margin-top: 100px;
+  margin-left: 70px;
+  margin-right: 70px;
+  text-align: justify;
+    p {
+      font-size: 10px;
+      color: #6d6d6d;
+    }
+    h5 {
+      color: #0f53a5;
+    }
 }
