--- a/app/views/static_pages/newpatients.html.erb
+++ b/app/views/static_pages/newpatients.html.erb
@@ -1,7 +1,15 @@
+<div class="pagetitle">
+	<div class="row-fluid">
+		<div class="span12">
+			<u>New Patients</u>
+		</div>
+	</div>			
+</div>
+
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<u><h3>New Patients</h3></u>
+			<u><h3>Introduction</h3></u>
 			<p>
 				It is a pleasure to welcome you to our TLC family of patients and a privilege to provide for your dental health and  "Dream Smile."  In your first and following visits, we will always welcome you warmly, offer you the most modern dental technology, afford you our signature "Gentle Dentistry," and draw on our years of training and experience to assure your dental well being.  In short, we will care for you as one of our family.<br>
 			</p>
@@ -31,7 +39,8 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Insurance: We fight for your Dental Health </h3>
+			<h3>Insurance: We Fight for your Dental Health </h3>
+			<%= image_tag 'boxing.jpg', :class => "center" %><br>
 			<p>
 				We work with most insurance plans and if you have dental coverage please bring your dental policy benefit book to your first appointment.  After a review of your dental history and a thorough and careful dental examination, we shall review with you the best treatment options for your dental and general health.<br>
 			</p>
@@ -57,7 +66,13 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>Payment Options</h3> <%= image_tag 'paymentoptions.jpg' %>
+			<h3>Payment Options</h3> 
+			<div class="row-fluid">
+				<div class="span12" style="margin-top:-70px;">
+					<%= image_tag 'paymentoptions.jpg', :class => "float-left" %>
+					<%= image_tag 'carecredit.jpg', :class => "float-right" %>
+				</div>
+			</div>
 			<p>
 				We offer several options to facilitate payment of your treatments.  For your convenience we accept cash, checks, and the following credit cards: Visa, MasterCard, American Express, and Discover.<br>
 			</p>
@@ -71,9 +86,10 @@
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="contact-container">
-			<h3>New Patient Special Offer</h3>
+			<h3>New Patient Seasonal Special Offer</h3>
+			<%= image_tag 'seasons.jpg', :class => "center" %><br>
 			<p>
-				If you are a new patient, we are pleased to offer you a Free Introductory Consultation.  This enables you to meet our landmark Toothbrush Mailbox and our devoted staff, to enjoy our comforting ambiance, to see our state of the art dental equipment; to experience our dental care and proficiency, to appreciate "the Art of Gentle Dentistry," and to prepare for your "Dream Smile."    
+				If you are a new patient, we are pleased to offer you a Free Seasonal Special Offer.  This enables you to meet our landmark Toothbrush Mailbox and our devoted staff, to enjoy our comforting ambiance, to see our state of the art dental equipment; to experience our dental care and proficiency, to appreciate "the Art of Gentle Dentistry," and to prepare for your "Dream Smile."    
 			</p>				
 		</div>
 	</div>
