social media button fixed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,13 @@
 <div class="container">
 	<div class="above-nav">
 		<div class="row-fluid">
-			<div class="span3">
+			<div class="offset1 span2">
 				<%= image_tag 'TLC_logo.jpg' %>
 			</div>
 			<div class="span6" style="margin-top: -15px;">
 				<b><i><h1>Rothenberg DDS/<br>TLC Dental Group</h1><h2>The Art of Gentle Dentistry</h2></b></i>
 			</div>
-			<div class="span3">
+			<div class="span2">
 				<i><h4 style="line-height:25px; margin-top: -6px;">315-637-7684<br>7197 Highbridge<br>Fayetteville, NY<br>Directions<br>Email Us</h4></i>
 			</div>	
 		</div>			
