--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -69,7 +69,7 @@
 	</div>
 </div>
 
-<div class="row-fluid">
+<div class="row-fluid" id="email">
 	<div class="span10 offset1">
 		<div class="contact-container">
 			<h3>Email Appointment</h3>
@@ -139,7 +139,7 @@
 	</div>
 </div>
 
-<div class="row-fluid">
+<div class="row-fluid" id="directions">
 	<div class="span10 offset1">
 		<div class="content-container">	
 			<h3>Directions</h3>	
