--- a/app/views/static_pages/staff.html.erb
+++ b/app/views/static_pages/staff.html.erb
@@ -48,7 +48,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
@@ -83,7 +82,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
@@ -118,7 +116,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
@@ -140,7 +137,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
@@ -162,7 +158,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
@@ -184,7 +179,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
@@ -206,7 +200,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
@@ -228,7 +221,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
@@ -250,7 +242,74 @@
 		</div>
 	</div>
 </div>
-
+<div class="row-fluid">
+	<div class="span10 offset1">
+		<div class="content-container" style="display:block;">
+			<h3>The TLC Tooth Fairy</h3>
+			<table>
+				<tr>	
+					<td rowspan="14">
+						<%= image_tag 'toothfairy.jpg' %>
+					</td>
+					<td>Birthplace:</td>
+					<td>Fairyland</td>
+				</tr>		
+				<tr>
+					<td>Mother:</td>
+					<td>The Tooth Fairy Queen</td>
+				</tr>
+				<tr>
+					<td>Twin Sisters:</td>
+					<td>19 (one for each baby tooth)</td>
+				</tr>				
+				<tr>
+					<td>Realatives:</td>
+					<td>Tinkerbell (my favorite cousin)</td>
+				</tr>	
+				<tr>
+					<td>Most Frightening Thing:</td>
+					<td>Stormy nights (they’re tough on wings)</td>
+				</tr>	
+				<tr>
+					<td>Most Fun Thing:</td>
+					<td>Sprinkling fairy dust on little boys and girls</td>
+				</tr>							
+				<tr>
+					<td>Second Most Fun Thing:</td>
+					<td>Visiting boys and girls at school and special events.</td>
+				</tr>
+				<tr>
+					<td>Third Most Fun Thing:</td>
+					<td>Visiting parents at special events. (some of them are really surprised to see me)</td>
+				</tr>
+				<tr>
+					<td>Favorite Food:</td>
+					<td>Reeses Pieces (the extraterrestrial favorite)</td>
+				</tr>				
+				<tr>
+					<td>Favorite Song:</td>
+					<td>I’m Flying (from Peter Pan)</td>
+				</tr>
+				<tr>
+					<td>Biggest Tooth Collected:</td>
+					<td>Gulliver’s baby molar.(I needed all my sisters just to lift it)</td>
+				</tr>				
+				<tr>
+					<td>Favorite Person:</td>
+					<td>Dr. Rothenberg.  He tells me which little boys and girls I should visit. (and he always lets me dance on his light beam)</td>
+				</tr>
+				<tr>
+					<td>Second Favorite Person:</td>
+					<td>Marsha Rothenberg.  She tells me funny stories. (sometimes she asks me for wings so she can fly with me but the Tooth Fairy Queen says no)</td>
+				</tr>
+				<tr>
+					<td>Third Favorite Person:</td>
+					<td>Flossy.  Well, she’s almost a person and she’s always happy to see me</td>
+				</tr>
+			</table>								
+		</div>
+	</div>
+</div>
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container" style="display:block;">
@@ -311,7 +370,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
@@ -369,7 +427,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
@@ -386,7 +443,6 @@
 		</div>
 	</div>
 </div>
-
 <div class="row-fluid">
 	<div class="span10 offset1">
 		<div class="content-container">
