--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -138,7 +138,7 @@
 			<div class="span12">
 				<h5> Our Website Family </h5>
 				<p>
-					Rothenberg DDS/TLC Dental Group; Dr. Stephen J. Rothenberg, DDS; Dr. Richard Brinker DDS; Route 92, 7197 Highbridge Road, Fayetteville, NY 13066 315-637-7684; tlcdentalgroup.com; toothbrushmailbox.com; thedentalencyclopedia.com; thedentaldictionary.com; wisdomtoothwit.com Drs. Rothenberg and Brinker provide the following services: dental bonding, bridges, cleaning, contourintg, crowns, dentures, fillings, fluoride treatments,implants, mouthguards, sealants, sleep apnia, snap-on-smile, snoring, teeth grinding, TMJ, veneers, whitening, wisdom teeth. They serve Greater Syracuse, New York  including Manlius, Fayetteville, Jamesville, DeWitt, Cazenovia, East Syracuse, Eastwick, Liverpool, North   Syracuse,  Cicero, Baldwinsville, Brighton,  copyright TLC Dental Group, 2013<br>
+					Rothenberg DDS/TLC Dental Group; Dr. Stephen J. Rothenberg, DDS; Dr. Richard Brinker DDS; Route 92, 7197 Highbridge Road, Fayetteville, NY 13066 315-637-7684<br>
 					A full service family dental practice serving Greater Syracuse.
 				</p>
 			</div>
