--- a/app/views/static_pages/rotadent.html.erb
+++ b/app/views/static_pages/rotadent.html.erb
@@ -10,7 +10,7 @@
 			</p>
 			<ul>
 				<li>Designed to protect and preserve normal teeth as well as veneers, bondings, crowns, bridges, implants, and braces.</li>
-				<li>A rotary brush head provides 360 degree sweeping action at a speed of </li>
+				<li>A rotary brush head provides 360 degree sweeping action at a speed of 1,350 revolutions per minute  </li>
 				<li>Proprietary MicroAccess filaments offer unrivaled reach below the gum line and into tight spaces to treat and prevent periodontal disease</li>
 				<li>Three bush heads <br>
 						Hollow - for cleaning, polishing, and delivery of medications<br>
@@ -23,7 +23,7 @@
 				<div class="span12">
 					<%= image_tag 'rotadentinfo.jpg' %>
 				</div>
-			</div>
+			</div><br>
 			<p>
 				<b>TLC Rotadent vs. Manual Toothbrush</b><br>
 				Quite simply, the TLC Rotadent has rendered the manual toothbrush obsolete in maintaining your dental health and Dream Smile.
